<resources>
    <string name="app_name">Kost Aja</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="register">Register</string>

    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_hp">Nomor Handphone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="belum_ada_account">Belum ada account? Register di sini</string>
    <string name="sudah_ada_account">Sudah ada account? Login di sini</string>
    <string name="title_activity_logged_in">LoggedInActivity</string>

    //akses token mapbox
    <string name="mapbox_access_token">pk.eyJ1IjoiYmFndXNzZXB0aWFudG8iLCJhIjoiY2tmbWZrb2pwMDJkeDJxb2ZjMmYxMmF3NiJ9.D9uQnL1JzwraoN5yly6CIg</string>

    <string name="next">Lanjut</string>
    <string name="skip">Skip</string>

    <string name="start">Mulai</string>

    <string name="slide_1_title">Kost Aja</string>
    <string name="slide_1_desc">Selamat datang di KostAja! Di sini kamu dapat mencari informasi tentang kost yang tersedia di seluruh Indonesia</string>

    <string name="slide_2_title">Yuk Kost Aja</string>
    <string name="slide_2_desc">Yuk cari kost idaman kamu!</string>
    <string name="daftar_kost">Daftar Kost</string>
    <string name="tambah_kost">Tambah Kost</string>
    <string name="edit_kost">Edit Kost</string>
    <string name="nama_kost">Nama Kost</string>
    <string name="alamat_kost">Alamat</string>
    <string name="tipe_kost">Tipe</string>
    <string name="batal">Batal</string>
    <string name="tambah">Tambah</string>
    <string name="edit">Edit</string>
    <string name="tambah_foto">Upload Foto</string>
    <string name="harga_kost">Harga</string>
    <string name="imageContentDesc">Image</string>
    <string name="kembali">Kembali</string>
    <string name="night_mode">Night mode</string>
    <string name="lihat_di_peta">Lihat pada Peta</string>
    <string name="tandai_di_peta">Tandai pada peta</string>
    <string name="nama">Nama</string>
    <string name="profile_saya">Profil Saya</string>
    <string name="bookmark_saya">Bookmark Saya</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="bookmark">Bookmark</string>
    <string name="tambah_bookmark">Tambah Bookmark</string>
    <string name="hapus">Hapus</string>
    <string name="fab_content_desc">Tambah Kost</string>
    <string name="galeri">Galeri</string>
    <string name="kamera">Kamera</string>
    <string name="pilih_media">Pilih Media</string>
    <string name="daftar_kost_saya">Daftar Kost Saya</string>
    <string name="simpan">Simpan</string>
    <string name="rupiah">Rp</string>
    <string name="per_bulan">/ bulan</string>
    <string name="hubungi_pemilik">Hubungi pemilik kost ini</string>
    <string name="daftar_bookmark_saya">Daftar Bookmark Saya</string>
    <string name="hapus_bookmark">Hapus bookmark</string>
</resources>