...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/bookmark_saya"
                    android:backgroundTint="?attr/buttonColor"/>

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/logout"
                    android:backgroundTint="?attr/buttonCancelColor"/>
...
